[Extensions] Fix bookmark drag-and-drop bug

https://crrev.com/33a7eb20639000a554a760f55c3746f6fa788c88 [formerly a32a0900c104b2143e6462febc81e6900dbd2104] stopped
ExtensionWebUI from being created for chrome://bookmarks in favor of
a WebContentsUserData implementation. Unfortunately, WebUI is created
on a per render frame basis and refreshed on navigation, whereas
WebContentsUserData are created once at web contents initalization.
As such, the bookmarks drag helper wasn't being created.

Instead, just create the bookmarks drag helper for each web contents.
It's a little unfortunate, but it's only called into with explicit
bookmark drag-and-drop commands and doesn't have any real initialization
cost or maintained state, so if it's never used in the web contents, it
becomes essentially a no-op. In practice, this is probably cheaper than
watching each navigation and conditionally creating/destroying the
helper on the fly.

BUG=665411

Review-Url: https://codereview.chromium.org/2509323003
Cr-Commit-Position: refs/heads/master@{#432978}

Former-commit-id: 5b68b9b08166d20070c7360c11da97e75f547f3d